# digitalscratch

./: .gitignore  .travis.yml  CNAME  LICENSE.md  README.md  concept.html  contact.html  demo.html  development.html  download.html  index.html  license.html  overview.html  screenshots.html
css/: bootstrap.css
debian/: julien.rosener@digital-scratch.org.gpg.key
debian-test/conf/: distributions
debian-test/db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
debian-test/dists/stable/: InRelease  Release  Release.gpg
debian/conf/: distributions
debian/db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
debian/dists/stable/: InRelease  Release  Release.gpg
digitalscratch/: AUTHORS  COPYING  INSTALL  NEWS  README  cppcheck.sh  digitalscratch.pro  digitalscratch.qrc  digitalscratch_resource.rc
digitalscratch/debian/: changelog  control  digitalscratch.desktop  generate_digitalscratch_deb.sh
digitalscratch/include/: application_const.h  application_logging.h  singleton.h  utils.h
digitalscratch/include/app/: application_const.h  application_logging.h  application_settings.h
digitalscratch/include/audiodev/: audio_device_access_rules.h  audio_io_control_rules.h  jack_access_rules.h  jack_client_control_rules.h  sound_card_control_rules.h  sound_driver_access_rules.h
digitalscratch/skins/: dark.css
digitalscratch/src/: application_logging.cpp  main.cpp  utils.cpp
digitalscratch/test/: audio_device_access_rules_test.cpp  audio_device_access_rules_test.h  audio_file_decoding_process_test.cpp  audio_file_decoding_process_test.h  audio_track_test.cpp  audio_track_test.h  control_and_playback_process_test.cpp  control_and_playback_process_test.h  data_persistence_test.cpp  data_persistence_test.h  keyfinder_test.cpp  keyfinder_test.h  main.cpp  main_test.cpp  playlist_persistence_test.cpp  playlist_persistence_test.h  sound_capture_and_playback_process_test.cpp  sound_capture_and_playback_process_test.h  utils_test.cpp  utils_test.h
digitalscratch/translations/: digitalscratch_fr.qm  digitalscratch_fr.ts
libdigitalscratch/: AUTHORS  COPYING  INSTALL  NEWS  README  changelog  digitalscratch_resource.rc  libdigitalscratch-test_resource.rc  libdigitalscratch.pro
libdigitalscratch/debian/: changelog  control  docs  generate_libdigitalscratch_deb.sh  libdigitalscratch-dev.install
libdigitalscratch/src/: FIR.cpp  IIR.cpp  Unwrap.cpp  coded_vinyl.cpp  controller.cpp  digital_scratch.cpp  digital_scratch_api.cpp  final_scratch_vinyl.cpp  fir_filter.cpp  iir_filter.cpp  inst_freq_extractor.cpp  log.cpp  mixvibes_vinyl.cpp  playing_parameter.cpp  position.cpp  serato_vinyl.cpp  speed.cpp  timecoded_signal_process.cpp  timecoded_vinyl.cpp  unwrapper.cpp  utils.cpp  volume.cpp
libdigitalscratch/test/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h  config.status  configure  configure.ac  controller_test.cpp  controller_test.h  digital_scratch_api_test.cpp  digital_scratch_api_test.h  digital_scratch_test.cpp  digital_scratch_test.h  generate_configure_script.sh  libtool  main_test.cpp  position_test.cpp  position_test.h  scenario_test.c  speed_test.cpp  speed_test.h  test_utils.cpp  test_utils.h  timecoded_signal_process_test.cpp  timecoded_signal_process_test.h  volume_test.cpp  volume_test.h
libdigitalscratch/test/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libdigitalscratch/test/data/: finalscratch_-_33rpm_0pitch.txt  serato_cv02_-_33rpm_0pitch_-_stopping_fast.txt  serato_perf_-_33rpm_0pitch_-_noises.ods  serato_perf_-_33rpm_0pitch_-_noises.txt  serato_perf_-_33rpm_0pitch_-_scratch.txt  serato_perf_-_33rpm_0pitch_-_starting_fast.ods  serato_perf_-_33rpm_0pitch_-_starting_fast.txt  serato_perf_-_33rpm_0pitch_-_stopping_fast.txt  timecode_1.ods  timecode_1.txt  timecode_1_analyzed.txt
libdigitalscratch/test/src/: Makefile.am  Makefile.in  coded_vinyl_test.cpp  digital-scratch-test  digital_scratch_api_test.cpp  digital_scratch_test_suite.cpp
libdigitalscratch/test/src/.deps/: controller_test.Po  digital_scratch_api_test.Po  digital_scratch_test.Po  digital_scratch_test_suite.Po  position_test.Po  speed_test.Po  test_utils.Po  volume_test.Po
libdigitalscratch/test/src/include/: scenario_test.h  test_utils.h
tools/: cppcheck.sh
windows/: .gitignore  generate_digitalscratch_msi.bat  gpl_license.rtf  msi_config.wxs
(+197 files in other folders)
