#
# Digital-scratch-test automake configuration script
#
# Julien Rosener <julien.rosener@digital-scratch.org>
#

## Process this file with automake to produce makefile.in

bin_PROGRAMS = digital-scratch-test

digital_scratch_test_SOURCES = test_utils.cpp \
                               digital_scratch_test_suite.cpp \
                               volume_test.cpp \
                               position_test.cpp \
                               controller_test.cpp \
                               speed_test.cpp \
                               digital_scratch_test.cpp \
                               digital_scratch_api_test.cpp

digital_scratch_test_LDFLAGS =
